Fixed problem in getFileUri.